bot project and minor changes

--- a/src/MagicLib/MagicLib.vcxproj
+++ b/src/MagicLib/MagicLib.vcxproj
@@ -75,11 +75,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Card.h" />
+    <ClInclude Include="CardDatabase.h" />
     <ClInclude Include="Mana.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Card.cpp" />
+    <ClCompile Include="CardDatabase.cpp" />
     <ClCompile Include="Mana.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
