--- a/src/MagicLib/MagicLib.vcxproj
+++ b/src/MagicLib/MagicLib.vcxproj
@@ -76,13 +76,21 @@
   <ItemGroup>
     <ClInclude Include="Card.h" />
     <ClInclude Include="CardDatabase.h" />
+    <ClInclude Include="CardInPlay.h" />
+    <ClInclude Include="Game.h" />
+    <ClInclude Include="GameContext.h" />
     <ClInclude Include="Mana.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Card.cpp" />
     <ClCompile Include="CardDatabase.cpp" />
+    <ClCompile Include="CardInPlay.cpp" />
+    <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameContext.cpp" />
     <ClCompile Include="Mana.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
