--- a/src/MagicLib/MagicLib.vcxproj.filters
+++ b/src/MagicLib/MagicLib.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="GameContext.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ActivatedAbility.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -63,6 +66,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="GameContext.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ActivatedAbility.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
