--- a/src/MagicTests/MagicTests.vcxproj.filters
+++ b/src/MagicTests/MagicTests.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="AffectTests.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CardInPlayTests.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
